[gd_scene load_steps=5 format=3 uid="uid://dukyflnmfnurk"]

[ext_resource type="Texture2D" uid="uid://c2egh5spibvp" path="res://sprites/ui/inconRED.png" id="1_a4pao"]
[ext_resource type="Script" path="res://script/next_beat.gd" id="1_qaxnl"]
[ext_resource type="Texture2D" uid="uid://b3soqjwkh2x21" path="res://sprites/ui/inconGREEN.png" id="2_o765i"]
[ext_resource type="Texture2D" uid="uid://d1ougenl0lyn8" path="res://sprites/ui/inconBLUE.png" id="3_u37n7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qaxnl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="index0" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_a4pao")

[node name="index1" type="TextureRect" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 2
texture = ExtResource("2_o765i")

[node name="index2" type="TextureRect" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0.196078)
layout_mode = 2
texture = ExtResource("3_u37n7")
